2006-03-28 Braden McDaniel  <braden@endoframe.com>

	Added support for constructing X3D Immersive profile scenes.
	From Andrew Grieve <sgrieve@users.sourceforge.net>

	* src/libopenvrml/Makefile.am
	(openvrml_include_HEADERS): Added openvrml/x3d_networking.h,
	openvrml/x3d_shape.h, and openvrml/x3d_geometry2d.h.
	(libopenvrml_la_SOURCES): Added openvrml/x3d_networking.cpp,
	openvrml/x3d_shape.cpp, and openvrml/x3d_geometry2d.cpp.
	* src/libopenvrml/openvrml/browser.cpp
	(x3d_immersive_profile): Added class corresponding to the X3D
	Immersive profile.
	(profile_registry::profile_registry()): Add the
	x3d_immersive_profile to the registry.
	(register_node_classes(openvrml::browser &)): Register the
	Networking, Shape, and Geometry2D component node implementations.
	(x3d_networking_component::add_to_scope(const openvrml::browser &,
	openvrml::scope &, int) const): Added definitions of level 3
	nodes: LoadSensor.
	(x3d_grouping_component::add_to_scope(const openvrml::browser &,
	openvrml::scope &, int) const): Added definitions of level 2
	nodes (Switch).
	(x3d_shape_component::add_to_scope(const openvrml::browser &,
	openvrml::scope &, int) const): Added definitions of level 2
	nodes: LineProperties.
	(x3d_geometry3d_component::add_to_scope(const openvrml::browser &,
	openvrml::scope &, int) const): Added definitions of level 3 and
	level 4 nodes: ElevationGrid, Extrusion.
	(x3d_geometry2d_component): Added class corresponding to the X3D
	Geometry2D component.
	(x3d_geometry2d_component::id): Component id.
	(x3d_geometry2d_component::add_to_scope(const openvrml::browser &,
	openvrml::scope &, int) const): Added definitions of level 1
	Geometry2D nodes: Polyline2D, Polypoint2D, Rectangle2D,
	TriangleSet2D.
	(x3d_text_component): Added class corresponding to the X3D Text
	component.
	(x3d_text_component::id): Component id.
	(x3d_text_component::add_to_scope(const openvrml::browser &,
	openvrml::scope &, int) const): Added definitions of level 1 Text